profilelist1exp/unpackaged/objects/Volume_Based_Forecast__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>AlaCarte_Available_MDF_ABU_S_P__c</fullName>
        <formula>AlaCarte_MDF_Forecast_ABU_S_P__c-AlaCarte_Plan_Breakout_ABU_S_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF ABU S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_ASAP__c</fullName>
        <formula>AlaCarte_MDF_Forecast_ASAP__c-AlaCarte_Plan_Breakout_ASAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF ASAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_All_Segments__c</fullName>
        <formula>AlaCarte_MDF_Forecast_All_Segments__c-AlaCarte_Plan_Breakout_All_Segments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF All Segments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_CSMR__c</fullName>
        <formula>AlaCarte_MDF_Forecast_CSMR__c - AlaCarte_Plan_Breakout_CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF CSMR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_CSRM_S_P__c</fullName>
        <formula>AlaCarte_MDF_Forecast_CSRM_S_P__c-AlaCarte_Plan_Breakout_CSRM_S_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF CSRM S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_Corporate_Events__c</fullName>
        <formula>AlaCarte_MDF_Forecast_Corporate_Events__c-AlaCarte_Plan_Breakout_Corporate_Events__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF Corporate Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_Global_Mktg__c</fullName>
        <formula>AlaCarte_MDF_Forecast_Global_Mktg__c-AlaCarte_Plan_Breakout_Global_Mktg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF Global Mktg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_Int_l__c</fullName>
        <formula>AlaCarte_MDF_Forecast_Intl__c-AlaCarte_Plan_Breakout_Int_l__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF Int&apos;l</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_LE__c</fullName>
        <formula>AlaCarte_MDF_Forecast_LE__c-AlaCarte_Plan_Breakout_LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF LE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_PUB__c</fullName>
        <formula>AlaCarte_MDF_Forecast_PUB__c-AlaCarte_Plan_Breakout_PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF PUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_SMB_Channel__c</fullName>
        <formula>AlaCarte_MDF_Forecast_SMB_Channel__c-AlaCarte_Plan_Breakout_SMB_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF SMB Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_SMB_Direct__c</fullName>
        <formula>AlaCarte_MDF_Forecast_SMB_Direct__c-AlaCarte_Plan_Breakout_SMB_Direct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF SMB Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_SMB__c</fullName>
        <formula>AlaCarte_MDF_Forecast_SMB__c-AlaCarte_Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available MDF SMB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Available_MDF_Total__c</fullName>
        <formula>AlaCarte_MDF_Forecast_Total__c  -  AlaCarte_Plan_BreakOut_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlaCarte Available MDF Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_ABU_S_P__c</fullName>
        <label>ABU S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_ASAP__c</fullName>
        <label>ASAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_All_Segments__c</fullName>
        <label>All Segments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_CSMR__c</fullName>
        <label>CSMR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_CSRM_S_P__c</fullName>
        <label>CSRM S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_Corporate_Events__c</fullName>
        <label>Corporate Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_Global_Mktg__c</fullName>
        <label>Global Mktg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_Intl__c</fullName>
        <label>Int&apos;l</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_LE__c</fullName>
        <label>LE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_PUB__c</fullName>
        <label>PUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_SMB_Channel__c</fullName>
        <label>SMB Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_SMB_Direct__c</fullName>
        <label>SMB Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_SMB__c</fullName>
        <label>SMB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_MDF_Forecast_Total__c</fullName>
        <formula>AlaCarte_MDF_Forecast_CSMR__c  +  AlaCarte_MDF_Forecast_LE__c  +  AlaCarte_MDF_Forecast_PUB__c  +  AlaCarte_MDF_Forecast_SMB__c  +  AlaCarte_MDF_Forecast_ABU_S_P__c  +  AlaCarte_MDF_Forecast_Global_Mktg__c  +  AlaCarte_MDF_Forecast_ASAP__c  +  AlaCarte_MDF_Forecast_CSRM_S_P__c  +  AlaCarte_MDF_Forecast_Corporate_Events__c  +  AlaCarte_MDF_Forecast_Intl__c  +  AlaCarte_MDF_Forecast_SMB_Channel__c  +  AlaCarte_MDF_Forecast_SMB_Direct__c  +  AlaCarte_MDF_Forecast_All_Segments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlaCarte MDF Forecast Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_BreakOut_Total__c</fullName>
        <formula>AlaCarte_Plan_Breakout_CSMR__c+AlaCarte_Plan_Breakout_LE__c+AlaCarte_Plan_Breakout_PUB__c+AlaCarte_Plan_Breakout_SMB__c+AlaCarte_Plan_Breakout_ABU_S_P__c+AlaCarte_Plan_Breakout_Global_Mktg__c+AlaCarte_Plan_Breakout_ASAP__c+AlaCarte_Plan_Breakout_CSRM_S_P__c+AlaCarte_Plan_Breakout_Corporate_Events__c+AlaCarte_Plan_Breakout_Int_l__c+AlaCarte_Plan_Breakout_SMB_Direct__c+AlaCarte_Plan_Breakout_SMB_Channel__c+AlaCarte_Plan_Breakout_All_Segments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlaCarte Plan BreakOut Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_ABU_S_P__c</fullName>
        <label>Plan Breakout ABU S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_ASAP__c</fullName>
        <label>Plan Breakout ASAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_All_Segments__c</fullName>
        <label>Plan Breakout All Segments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_CSMR__c</fullName>
        <label>Plan Breakout CSMR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_CSRM_S_P__c</fullName>
        <label>Plan Breakout CSRM S&amp;P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_Corporate_Events__c</fullName>
        <label>Plan Breakout Corporate Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_Global_Mktg__c</fullName>
        <label>Plan Breakout Global Mktg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_Int_l__c</fullName>
        <label>Plan Breakout Int&apos;l</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_LE__c</fullName>
        <label>Plan Breakout LE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_PUB__c</fullName>
        <label>Plan Breakout PUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_SMB_Channel__c</fullName>
        <label>Plan Breakout SMB Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_SMB_Direct__c</fullName>
        <label>Plan Breakout SMB Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaCarte_Plan_Breakout_SMB__c</fullName>
        <label>Plan Breakout SMB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_MDF_CSMR__c</fullName>
        <formula>IF (
AND (
ISBLANK(Final_Outlook_CSMR__c),
ISBLANK(Outlook_2_CSMR__c),
ISBLANK(Outlook_1_CSMR__c),
ISBLANK(MDF_Forecast_CSMR__c)), 0 - Plan_Breakout_CSMR__c,

IF (
AND (
ISBLANK(Final_Outlook_CSMR__c ),
ISBLANK(Outlook_2_CSMR__c),
ISBLANK(Outlook_1_CSMR__c),
NOT(ISBLANK(MDF_Forecast_CSMR__c))), MDF_Forecast_CSMR__c - Plan_Breakout_CSMR__c,

IF (
AND (
ISBLANK( Final_Outlook_CSMR__c),
ISBLANK(Outlook_2_CSMR__c),
NOT(ISBLANK( Outlook_1_CSMR__c))), Outlook_1_Difference_CSMR__c ,

IF (
AND (
ISBLANK(Final_Outlook_CSMR__c),
NOT(ISBLANK(Outlook_2_CSMR__c))), Outlook_2_Difference_CSMR__c ,

IF (
NOT(ISBLANK(Final_Outlook_CSMR__c)), Final_Difference_CSMR__c, 0)
)
)
)
)</formula>
        <label>Available MDF (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_MDF_LE__c</fullName>
        <formula>IF ( 
AND ( 
ISBLANK(Final_Outlook_LE__c), 
ISBLANK(Outlook_2_LE__c), 
ISBLANK(Outlook_1_LE__c), 
ISBLANK(MDF_Forecast_LE__c)), 0 - Plan_Breakout_LE__c, 
 
IF ( 
AND ( 
ISBLANK(Final_Outlook_LE__c ), 
ISBLANK(Outlook_2_LE__c), 
ISBLANK(Outlook_1_LE__c), 
NOT(ISBLANK(MDF_Forecast_LE__c))), MDF_Forecast_LE__c - Plan_Breakout_LE__c, 
 
IF ( 
AND ( 
ISBLANK( Final_Outlook_LE__c), 
ISBLANK(Outlook_2_LE__c), 
NOT(ISBLANK( Outlook_1_LE__c))), Outlook_1_Difference_LE__c , 
 
IF ( 
AND ( 
ISBLANK(Final_Outlook_LE__c), 
NOT(ISBLANK(Outlook_2_LE__c))), Outlook_2_Difference_LE__c , 
 
IF ( 
NOT(ISBLANK(Final_Outlook_LE__c)), Final_Difference_LE__c, 0) 
) 
) 
) 
)</formula>
        <label>Available MDF (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_MDF_PUB__c</fullName>
        <formula>IF ( 
AND ( 
ISBLANK(Final_Outlook_PUB__c), 
ISBLANK(Outlook_2_PUB__c), 
ISBLANK(Outlook_1_PUB__c), 
ISBLANK(MDF_Forecast_PUB__c)), 0 - Plan_Breakout_PUB__c, 
 
IF ( 
AND ( 
ISBLANK(Final_Outlook_PUB__c ), 
ISBLANK(Outlook_2_PUB__c), 
ISBLANK(Outlook_1_PUB__c), 
NOT(ISBLANK(MDF_Forecast_PUB__c))), MDF_Forecast_PUB__c - Plan_Breakout_PUB__c, 
 
IF ( 
AND ( 
ISBLANK( Final_Outlook_PUB__c), 
ISBLANK(Outlook_2_PUB__c), 
NOT(ISBLANK( Outlook_1_PUB__c))), Outlook_1_Difference_PUB__c , 
 
IF ( 
AND ( 
ISBLANK(Final_Outlook_PUB__c), 
NOT(ISBLANK(Outlook_2_PUB__c))), Outlook_2_Difference_PUB__c , 
 
IF ( 
NOT(ISBLANK(Final_Outlook_PUB__c)), Final_Difference_PUB__c, 0) 
) 
) 
) 
)</formula>
        <label>Available MDF (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_MDF_SMB__c</fullName>
        <formula>IF (
AND (
ISBLANK(Final_Outlook_SMB__c),
ISBLANK(Outlook_2_SMB__c),
ISBLANK(Outlook_1_SMB__c),
ISBLANK(MDF_Forecast_SMB__c)), 0 - Plan_Breakout_SMB__c,
 
IF (
AND (
ISBLANK(Final_Outlook_SMB__c ),
ISBLANK(Outlook_2_SMB__c),
ISBLANK(Outlook_1_SMB__c), 
NOT(ISBLANK(MDF_Forecast_SMB__c))), MDF_Forecast_SMB__c - Plan_Breakout_SMB__c,
 
IF (
AND (
ISBLANK( Final_Outlook_SMB__c),
ISBLANK(Outlook_2_SMB__c),
NOT(ISBLANK( Outlook_1_SMB__c))), Outlook_1_Difference_SMB__c ,
 
IF (
AND (
ISBLANK(Final_Outlook_SMB__c),
NOT(ISBLANK(Outlook_2_SMB__c))), Outlook_2_Difference_SMB__c ,
 
IF (
NOT(ISBLANK(Final_Outlook_SMB__c)), Final_Difference_SMB__c, 0)
)
)
)
)</formula>
        <label>Available MDF (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSMR__c</fullName>
        <label>CSMR</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>NOLA</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Difference_CSMR__c</fullName>
        <formula>Final_Outlook_CSMR__c -  Plan_Breakout_CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Difference (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Difference_LE__c</fullName>
        <formula>Final_Outlook_LE__c - Plan_Breakout_LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Difference (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Difference_PUB__c</fullName>
        <formula>Final_Outlook_PUB__c - Plan_Breakout_PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Difference (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Difference_SMB__c</fullName>
        <formula>Final_Outlook_SMB__c - Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Difference (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Difference_Total__c</fullName>
        <formula>Final_Difference_CSMR__c + Final_Difference_LE__c + Final_Difference_PUB__c + Final_Difference_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Difference (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Outlook_CSMR__c</fullName>
        <label>Final Outlook (CSMR)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Outlook_LE__c</fullName>
        <label>Final Outlook (LE)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Outlook_PUB__c</fullName>
        <label>Final Outlook (PUB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Outlook_SMB__c</fullName>
        <label>Final Outlook (SMB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Outlook_Total__c</fullName>
        <formula>Final_Outlook_CSMR__c  +  Final_Outlook_LE__c  +  Final_Outlook_PUB__c  +  Final_Outlook_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Outlook (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Difference_CSMR__c</fullName>
        <formula>MDF_Forecast_CSMR__c - Plan_Breakout_CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Difference (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Difference_LE__c</fullName>
        <formula>MDF_Forecast_LE__c - Plan_Breakout_LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Difference (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Difference_PUB__c</fullName>
        <formula>MDF_Forecast_PUB__c - Plan_Breakout_PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Difference (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Difference_SMB__c</fullName>
        <formula>MDF_Forecast_SMB__c - Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Difference (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Difference_Total__c</fullName>
        <formula>Forecast_Difference_CSMR__c + Forecast_Difference_LE__c + Forecast_Difference_PUB__c + Forecast_Difference_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Difference (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Name__c</fullName>
        <label>Forecast Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_CSMR__c</fullName>
        <label>Invoice Amount (CSMR)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_LE__c</fullName>
        <label>Invoice Amount (LE)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_PUB__c</fullName>
        <label>Invoice Amount (PUB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_SMB__c</fullName>
        <label>Invoice Amount (SMB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Total__c</fullName>
        <formula>Invoice_Amount_CSMR__c + Invoice_Amount_LE__c + Invoice_Amount_PUB__c + Invoice_Amount_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LE__c</fullName>
        <label>LE</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDF_Forecast_CSMR__c</fullName>
        <formula>Total_MDF_Forecast__c * CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDF Forecast (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Forecast_LE__c</fullName>
        <formula>Total_MDF_Forecast__c * LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDF Forecast (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Forecast_PUB__c</fullName>
        <formula>Total_MDF_Forecast__c * PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDF Forecast (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Forecast_SMB__c</fullName>
        <formula>Total_MDF_Forecast__c * SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDF Forecast (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Forecast_Total__c</fullName>
        <formula>MDF_Forecast_CSMR__c + MDF_Forecast_LE__c + MDF_Forecast_PUB__c + MDF_Forecast_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDF Forecast (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_CSMR__c</fullName>
        <label>Outlook 1 (CSMR)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_Difference_CSMR__c</fullName>
        <formula>Outlook_1_CSMR__c - Plan_Breakout_CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 Difference (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_Difference_LE__c</fullName>
        <formula>Outlook_1_LE__c - Plan_Breakout_LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 Difference (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_Difference_PUB__c</fullName>
        <formula>Outlook_1_PUB__c - Plan_Breakout_PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 Difference (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_Difference_SMB__c</fullName>
        <formula>Outlook_1_SMB__c - Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 Difference (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_Difference_Total__c</fullName>
        <formula>Outlook_1_Difference_CSMR__c + Outlook_1_Difference_LE__c + Outlook_1_Difference_PUB__c + Outlook_1_Difference_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 Difference (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_LE__c</fullName>
        <label>Outlook 1 (LE)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_PUB__c</fullName>
        <label>Outlook 1 (PUB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_1_SMB__c</fullName>
        <label>Outlook 1 (SMB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>